# solving_quadratic_equations

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_output.txt
accounts/: tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
my_quadratic_solver/: settings.py  urls.py
news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_category_tag_news_category_news_tags.py  0003_alter_news_category.py  0004_news_author_news_status.py
news/templates/: layout.html
news/templates/news/: news_by_category.html  news_by_tag.html  news_detail.html  news_list.html
solver/: models.py  tests.py  urls.py  views.py
solver/migrations/: 0001_initial.py
solver/templates/: layout.html
solver/templates/solver/: menu.html  solve.html  trainer.html
static/css/: style.css
stats/: urls.py  views.py
stats/templates/stats/: stats_page.html
